refactor(DataInitializationService): JSON 데이터 DB 저장 속도 개선 및 로깅 추가